# vsc_uav_target_tracking

./: CMakeLists.txt  README.md  package.xml
config/: controller_gains.yaml  img_moments_ibvs_controller_gains.yaml
dvs_vsc/: feature_publisher.py
ekf_implem/: ekf_implementation.py  ekf_matlab_implementation.m  ekf_ros_implementation.py  foo.py  mavros-setpoint_raw-local_3.csv  pred_data_3.csv  vsc_data_3.csv
ekf_implem/vsc_ekf_estimation_of_wave_09_03_2021_session_10/: mavros-setpoint_raw-local.csv  pred_data.csv
ekf_implem/vsc_ekf_estimation_of_wave_09_03_2021_session_7/: mavros-setpoint_raw-local.csv  pred_data.csv
ekf_implem/vsc_ekf_estimation_of_wave_09_03_2021_session_8/: mavros-setpoint_raw-local.csv  pred_data.csv
ekf_implem/vsc_ekf_estimation_of_wave_09_03_2021_session_9/: mavros-setpoint_raw-local.csv  pred_data.csv
include/: Controller.hpp  DynamicsCalculator.hpp  VelocityTransformer.hpp
include/vsc_uav_target_tracking/: Controller.hpp  DynamicsCalculator.hpp  FeatureData.hpp  VelocityTransformer.hpp
launch/: my_controller.launch  run.launch
msg/: EKFdata.msg  IBVSdata.msg  KNet_pos_input.msg  PVSdata.msg  VSCdata.msg
params/: my_controller_params.yaml
src/: ekf_estimation.py  feature_manipulation.py  main_node.py  ros_communication.py  visual_servoing_control.py  visual_servoing_utils.py
src/dvs_vsc/: event_based_ibvs.py
src/ibvs_uav/: vsc_ibvs_classic_uav.py  vsc_ibvs_tracking_ekf_est.py  vsc_ibvs_tracking_no_filter_deriv.py
src/pvs_uav/: part_vs_track_ekf_est.py  pvs_barycenter_tracking.py
src/roscpp_node/: Controller.cpp  DynamicsCalculator.cpp  FeatureData.cpp  VelocityTransformer.cpp  node.cpp
vsc_uav/: img_moments_ibvs_chaumette.py  part_vs_track_ekf_est.py  part_vs_track_flownet.py  part_vs_track_knet_est.py  part_vs_track_ma_filter_deriv.py  pvs_barycenter_tracking.py  vsc_ibvs_tracking_ekf_est.py  vsc_ibvs_tracking_flownet.py  vsc_ibvs_tracking_knet_est.py  vsc_ibvs_tracking_ma_filter_deriv.py
vsc_uav_jetson/: vsc_ibvs_classic_uav.py  vsc_ibvs_tracking_ekf_est.py  vsc_ibvs_tracking_ma_filter_deriv.py  vsc_ibvs_tracking_no_filter_deriv.py
(+8 files in other folders)
